--- a/package.json
+++ b/package.json
@@ -32,12 +32,17 @@
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "rimraf": "^2.6.3",
-    "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
+    "vue": "^2.6.10"
   }
 }
