--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "lodash": "^4.17.11",
     "vue": "^2.6.10"
   }
 }
